fixed previous commit attempt >> scrollbar be perfectly bottom if new input msg were written

--- a/client/src/coms/Chat/Chat.css
+++ b/client/src/coms/Chat/Chat.css
@@ -61,7 +61,7 @@
   background-size: cover;
   background-position: center;
 
-  padding: 30px 15px;
+  padding: 0 15px;
   color: lavender;
   display: flex;
 
@@ -76,6 +76,7 @@
   position: relative;
   font-size: 14px;
   padding: 10px;
+  margin-bottom: 12px;
   background-color: var(--chat-sender-bg--);
   border-radius: 8px;
   width: fit-content;
